--- a/xbmc/platform/darwin/tvos/Info.plist.in
+++ b/xbmc/platform/darwin/tvos/Info.plist.in
@@ -38,5 +38,16 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLName</key>
+		<string>org.xbmc.kodi</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>kodi</string>
+		</array>
+	</dict>
+	</array>
 </dict>
 </plist>
